- use new shutdown helper app on macOS for easier and configurable shutdown options
Former-commit-id: 637728b65721fc0d9d135f7b34a604be232af0c3